--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
+    "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
@@ -19,6 +20,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^6.3.0",
     "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "next": "^14.1.0",
     "next-i18next": "^15.2.0",
     "next-sitemap": "^4.2.3",
